--- a/browser/index.html
+++ b/browser/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <title>Archaeologist Browser Network Test</title>
-  </head>
 
-  <body>
-    <header>
-      <h1 id="status">Starting libp2p...</h1>
-    </header>
-    <main>
-      <pre id="output"></pre>
-    </main>
-    <script type="module" src="./index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Archaeologist Browser Network Test</title>
+</head>
+
+<body>
+  <header>
+    <h1 id="status">Starting libp2p...</h1>
+  </header>
+  <main>
+    <input type="file" id="file-input">
+    <pre id="output"></pre>
+  </main>
+  <script type="module" src="./index.js"></script>
+</body>
+
 </html>
