--- a/browser/index.html
+++ b/browser/index.html
@@ -11,7 +11,8 @@
     <h1 id="status">Starting libp2p...</h1>
   </header>
   <main>
-    <input type="file" id="file-input">
+    <input type="text" id="message">
+    <div style="font-size:12px">hit enter after inputting text to send message</div>
     <pre id="output"></pre>
   </main>
   <script type="module" src="./index.js"></script>
